fix: dashboard link and layout problem

--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -18,7 +18,7 @@
     z-index: 99999;
 }
 .sidebar-image-container {
-    margin-top: 50px;
+    margin-top: 25px;
 }
 .sidebar-link-submenu-container .sidebar-links-container {
     margin-top: 0;
